// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BSelect rendors a default select list 1`] = `
<div>
    <div>
        <label id="label-testId">test
            <!---->
        </label>
    </div>
    <div aria-label="test" aria-owns="testId" aria-describedby="errortestId" aria-labelledby="label-testId" id="dropdowntestId" tabindex="0" role="listbox">
        <ul id="testId" class="">
            <li aria-haspopup="listbox" class="options unselected">Choose Option
                <span class="dropdown-arrow"><i aria-hidden="true" class="fa fa-caret-down"></i></span></li>
            <!---->
        </ul> <span id="errortestId" class="error" style="display: none;"></span></div>
</div>
`;

exports[`BSelect rendors a select list with a placeholder 1`] = `
<div>
    <div>
        <label id="label-testId">test
            <!---->
        </label>
    </div>
    <div aria-label="test" aria-owns="testId" aria-describedby="errortestId" aria-labelledby="label-testId" id="dropdowntestId" tabindex="0" role="listbox">
        <ul id="testId" class="">
            <li aria-haspopup="listbox" class="options unselected">test placeholder
                <span class="dropdown-arrow"><i aria-hidden="true" class="fa fa-caret-down"></i></span></li>
            <!---->
        </ul> <span id="errortestId" class="error" style="display: none;"></span></div>
</div>
`;

exports[`BSelect rendors a select list with an initial value 1`] = `
<div>
    <div>
        <label id="label-testId">test
            <!---->
        </label>
    </div>
    <div aria-label="test" aria-owns="testId" aria-describedby="errortestId" aria-labelledby="label-testId" id="dropdowntestId" tabindex="0" role="listbox">
        <ul id="testId" class="">
            <li aria-haspopup="listbox" class="options selected">test
                <span class="dropdown-arrow"><i aria-hidden="true" class="fa fa-caret-down"></i></span></li>
            <!---->
        </ul> <span id="errortestId" class="error" style="display: none;"></span></div>
</div>
`;
